--- a/index.html
+++ b/index.html
@@ -6,56 +6,81 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
 
 <header class="site-header">
   <div class="logo">OMICRON</div>
-  <a class="nav-link" href="#">Fits · Puma</a>
+  <a class="nav-link" href="#">All fits</a>
 </header>
 
 <main class="page">
-  <h1 class="grid-title">Curated fits</h1>
 
-  <div class="grid">
+  <h1 class="main-title">Featured Fits</h1>
 
-    <!-- Ferrari Tee -->
-    <a class="card" href="product-ferrari.html">
-      <div class="card-img-wrap">
-        <img class="card-img" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/713709/01/mod01/fnd/IND/fmt/png/Scuderia-Ferrari-HP-Team-Men's-Monza-Tee" alt="Scuderia Ferrari HP Team Men's Monza Tee">
+  <div class="product-grid">
+
+    <!-- 1. Ferrari Tee -->
+    <a class="product-card" href="product-ferrari.html">
+      <div class="product-img-wrap">
+        <img class="product-thumb" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750/global/763619/06/mod01/fnd/IND/fmt/png" alt="Ferrari Tee">
       </div>
-      <div class="card-body">
-        <div class="card-name">Scuderia Ferrari HP Team Men's Monza Tee</div>
-        <div class="card-price">₹7,900</div>
+      <div class="product-info">
+        <h2 class="product-name">Ferrari Monza Tee</h2>
+        <p class="product-price">₹5,499</p>
       </div>
     </a>
 
-    <!-- T7 Jacket -->
-    <a class="card" href="product-t7.html">
-      <div class="card-img-wrap">
-        <img class="card-img" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/632994/87/mod01/fnd/IND/fmt/png/T7-Relaxed-Wing-Collar-Track-Jacket" alt="T7 Relaxed Wing Collar Track Jacket">
+    <!-- 2. Man City Tee -->
+    <a class="product-card" href="product-mancity.html">
+      <div class="product-img-wrap">
+        <img class="product-thumb" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750/global/777562/01/mod01/fnd/IND/fmt/png" alt="Man City Tee">
       </div>
-      <div class="card-body">
-        <div class="card-name">T7 Relaxed Wing Collar Track Jacket</div>
-        <div class="card-price">₹5,793</div>
+      <div class="product-info">
+        <h2 class="product-name">Manchester City Tee</h2>
+        <p class="product-price">₹3,999</p>
       </div>
     </a>
 
-    <!-- Man City Jersey -->
-    <a class="card" href="product-mancity.html">
-      <div class="card-img-wrap">
-        <img class="card-img" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750,h_750/global/770438/01/mod01/fnd/IND/fmt/png/Manchester-City-23-24-Men's-Football-Replica-Home-Jersey" alt="Manchester City 23/24 Men's Football Replica Home Jersey">
+    <!-- 3. T7 Track Jacket -->
+    <a class="product-card" href="product-t7.html">
+      <div class="product-img-wrap">
+        <img class="product-thumb" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750/global/632994/87/mod01/fnd/IND/fmt/png" alt="T7 Track Jacket">
       </div>
-      <div class="card-body">
-        <div class="card-name">Manchester City 23/24 Home Jersey</div>
-        <div class="card-price">₹5,793</div>
+      <div class="product-info">
+        <h2 class="product-name">T7 Track Jacket</h2>
+        <p class="product-price">₹5,793</p>
+      </div>
+    </a>
+
+    <!-- 4. Aston Martin Gear Jacket -->
+    <a class="product-card" href="product-gearjacket.html">
+      <div class="product-img-wrap">
+        <img class="product-thumb" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750/global/635893/01/mod01/fnd/IND/fmt/png" alt="Aston Martin Jacket">
+      </div>
+      <div class="product-info">
+        <h2 class="product-name">Aston Martin F1 Gear Jacket</h2>
+        <p class="product-price">₹21,070</p>
+      </div>
+    </a>
+
+    <!-- 5. BMW M Motorsport Tee -->
+    <a class="product-card" href="product-bmwtee.html">
+      <div class="product-img-wrap">
+        <img class="product-thumb" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa,w_750/global/632578/01/mod01/fnd/IND/fmt/png" alt="BMW M Motorsport Tee">
+      </div>
+      <div class="product-info">
+        <h2 class="product-name">BMW M Motorsport Tee</h2>
+        <p class="product-price">₹4,479</p>
       </div>
     </a>
 
   </div>
+
 </main>
 
 <footer class="footer">
-  Omicron · curated looks with Puma IN affiliate links.
+  Omicron · 2025
 </footer>
 
 </body>
