Update Ferrari Tee image source

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <!-- 1. Ferrari Tee -->
 <a class="card" href="product-ferrari.html">
     <div class="card-img-wrap">
-        <img class="card-img" src="https://images.puma.com/image/upload/f_auto,q_auto,b_rgb:fafafa/global/763663/01/mod01/fnd/IND/w/600/h/600/fmt/jpg">
+        <img class="card-img" src="https://i.imgur.com/LtvE6Y4.jpeg">
     </div>
     <div class="card-body">
         <div class="card-title">Scuderia Ferrari HP Team Men's Monza Tee</div>
